--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -18,9 +18,7 @@ import Footer from '../components/Footer.astro';
 		<main>
 			<slot />
 		</main>
+		<!-- Footer component -->
 		<Footer />
-		<main>
-			<slot />
-		</main>
 	</body>
 </html>
