--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,3 +1,5 @@
 <footer>
-    Este el footer
+    <div class="max-w-auto mx-auto p-8 text-center text-sm text-gray-500 w-full fixed bottom-0 left-0 bg-white shadow">
+        &copy; 2024 Astro Basics. All rights reserved.
+    </div>
 </footer>
