--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,8 +1,8 @@
-<header class="max-w-[1440px] mx-auto p-8 flex justify-between items-center">
-<img src="/favicon.svg" alt="Logo de Astro Basics" class="w-auto h-[30px]" />
-<a href="#"
-    class="text-lg font-semibold bg-red-400 text-white px-4 py-2 hover:bg-red-700 transition-colors"
-    >
-    Crea tu cuenta
-</a>
+<header class="sticky top-0 max-w-[1440px] mx-auto p-8 flex justify-between items-center bg-white z-50">
+    <img src="/favicon.svg" alt="Logo de Astro Basics" class="w-auto h-[30px]" />
+    <a href="#"
+        class="text-lg font-semibold bg-red-400 text-white px-4 py-2 hover:bg-red-700 transition-colors"
+        >
+        Crea tu cuenta
+    </a>
 </header>
