--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -11,7 +11,7 @@ import Footer from '../components/Footer.astro';
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="generator" content={Astro.generator} />
 		<title>Astro Basics</title>
-		<link rel="stylesheet" href="/src/styles/global.css" />
+  		<link rel="stylesheet" href="/public/global.css" />
 	</head>
 	<body>
 		<Header />
