--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -1,5 +1,10 @@
-<div class="items-center justify-center flex flex-col h-screen bg-cover bg-center">
-    <div class="hero-content">
+<style>
+    .fondo-degrade {
+        background: linear-gradient(90deg,rgba(138, 80, 204, 1) 0%, rgba(65, 0, 245, 1) 50%, rgba(75, 5, 110, 1) 100%);
+    }
+</style>
+<div class="fondo-degrade items-center justify-center flex flex-col h-screen bg-cover bg-center">
+    <div class="hero-content text-center text-white text-2xl">
         <h1>Welcome to Astro Basics</h1>
         <p>Learn the fundamentals of building fast, modern websites with Astro.</p>
         <div id="links">
