--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -8,7 +8,7 @@
         <h1>Welcome to Astro Basics</h1>
         <p>Learn the fundamentals of building fast, modern websites with Astro.</p>
         <div id="links">
-            <a href="/docs" class="button">Get Started</a>
-            <a href="/blog">Read the Blog</a>
+            <a href="" class="button">Get Started</a>
+            <a href="">Read the Blog</a>
         </div>
     </div>
