--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,5 +1,5 @@
 <footer>
-    <div class="max-w-auto mx-auto p-8 text-center text-sm text-gray-500 w-full fixed bottom-0 left-0 shadow">
+    <div class="max-w-auto mx-auto p-8 text-center text-sm text-white w-full fixed bottom-0 left-0 shadow">
         &copy; 2024 Astro Basics. All rights reserved.
     </div>
 </footer>
