--- a/src/components/Bento.astro
+++ b/src/components/Bento.astro
@@ -1,10 +1,6 @@
 <div class="items-center justify-center flex flex-col h-screen bg-cover bg-center">
     <div class="hero-content text-center text-white text-2xl">
-        <h1>Welcome to Astro Basics</h1>
+        <h2></h2>Welcome to Astro Basics</h2>
         <p>Learn the fundamentals of building fast, modern websites with Astro.</p>
-        <div id="links">
-            <a href="" class="button">Get Started</a>
-            <a href="">Read the Blog</a>
-        </div>
     </div>
 </div>
