--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,9 +1,17 @@
 ---
+import Bento from '@components/Bento.astro';
 import Hero from '@components/Hero.astro';
+import Jobs from '@components/Jobs.astro';
+import PreFooter from '@components/PreFooter.astro';
+import Social from '@components/Social.astro';
 import Layout from '@layouts/Layout.astro';
 
 ---
 
 <Layout title="Landig Curso Astro Basics">
     <Hero />
+    <Bento />
+    <Jobs />
+    <Social />
+    <PreFooter />
 </Layout>
