--- a/src/components/Bento.astro
+++ b/src/components/Bento.astro
@@ -1,6 +1,6 @@
 <div class="items-center justify-center flex flex-col h-screen bg-cover bg-center">
     <div class="hero-content text-center text-white text-2xl">
-        <h2></h2>Welcome to Astro Basics</h2>
+        <h2>Segunda Sección</h2>
         <p>Learn the fundamentals of building fast, modern websites with Astro.</p>
     </div>
 </div>
