--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -2,6 +2,7 @@
 import Header from '@components/Header.astro';
 import Footer from '@components/Footer.astro';
 
+import "@styles/global.css";
 ---
 <!doctype html>
 <html lang="en">
@@ -11,7 +12,6 @@ import Footer from '@components/Footer.astro';
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="generator" content={Astro.generator} />
 		<title>Astro Basics</title>
-		<link rel="stylesheet" href="/public/global.css" />
 	</head>
 	<body class="fondo-degrade">
 		<Header />
