--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -1,10 +1,18 @@
-<div class="items-center justify-center flex flex-col h-screen bg-cover bg-center">
-    <div class="hero-content text-center text-white text-2xl">
-        <h1>Welcome to Astro Basics</h1>
-        <p>Learn the fundamentals of building fast, modern websites with Astro.</p>
-        <div id="links">
-            <a href="" class="button">Get Started</a>
-            <a href="">Read the Blog</a>
-        </div>
+<section class="mx-auto max-w-7xl px-4> w-full px-4 py-8">
+    <div class="fondo-search mx-auto w-full rounded-3xl px-4 py-6">
+        <h1 class="text-black/80 font-semibold tracking-[0.5px] text-2xl text-center pb-4">Bienvenido a Astro Basics</h1>
+        <search class="bg-white rounded-3xl p-4">
+            <form>  
+               <button class="rounded-full text-white bg-amber-400 hover:bg-amber-600 py-4 px-6 item-center w-full font-semibold transition-colors">
+                Buscar
+            </button> 
+            </form>
+        </search>
     </div>
-</div>
+</section>
+
+<style> 
+    .fondo-search {
+        background: linear-gradient(90deg,rgba(233, 212, 255, 1) 0%, rgba(250, 255, 179, 1) 50%, rgba(255, 201, 234, 1) 100%);
+    }
+</style>
