--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -12,6 +12,11 @@ import "@styles/global.css";
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="generator" content={Astro.generator} />
 		<title>Astro Basics</title>
+
+		<link rel="preconnect" href="https://fonts.googleapis.com">
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+		<link href="https://fonts.googleapis.com/css2?family=Bangers&family=Noto+Serif:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+	
 	</head>
 	<body class="fondo-degrade">
 		<Header />
@@ -24,6 +29,6 @@ import "@styles/global.css";
 </html>
 <style>
     .fondo-degrade {
-        background-image: linear-gradient(to right top, #051937, #15265c, #392f80, #6633a0, #9a2bb9);
+		background-image: linear-gradient(142.56deg, #322C7A 21.68%, #30ABBD 80.35%);
     }
 </style>
