--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,5 +1,5 @@
 <footer>
-    <div class="max-w-4xl mx-auto p-8 text-center text-sm text-grey-400 w-full shadow">
-        &copy; 2024 Astro Basics. All rights reserved.
+    <div class="max-w-4xl mx-auto p-8 text-center text-sm text-grey-400 w-full">
+        &copy; Leandro Barrios Designer
     </div>
 </footer>
