--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -2,7 +2,7 @@
 <header class="sticky top-0 max-w-[1440px] mx-auto p-8 flex justify-between items-center z-50">
     <img src="/favicon.svg" alt="Logo de Astro Basics" class="w-auto h-[30px]" />
     <a href="#"
-        class="text-lg font-semibold bg-blue-500 text-white rounded-full px-4 py-2 hover:saturate-50 transition-colors"
+        class="text-lg font-semibold bg-blue-500 text-white rounded-full px-4 py-2 hover:bg-blue-700 transition-colors"
         >
         Crea tu cuenta
     </a>
