--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,5 +1,10 @@
 <footer>
-    <div class="max-w-4xl mx-auto p-8 text-center text-sm text-grey-400 w-full">
+    <div class="max-w-4xl mx-auto p-8 text-center text-sm w-full magenta-dark">
         &copy; Leandro Barrios Designer
     </div>
 </footer>
+
+<style>
+    .magenta-dark {
+       color: #ffa9db;
+    }
