--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -1,9 +1,12 @@
+---
+import "@styles/global.css";
+---
 <section class="mx-auto max-w-7xl px-4> w-full px-4 py-8">
     <div class="fondo-search mx-auto w-full rounded-3xl px-4 py-6">
-        <h1 class="font-semibold text-black/80 tracking-[0.5px] text-2xl text-center pb-4">Bienvenido a Astro Basics</h1>
+        <h1 class="Poppins font-semibold text-black/80 tracking-[0.5px] text-2xl text-center pb-4">Bienvenido a Astro Basics</h1>
         <search class="bg-white rounded-3xl p-4">
             <form class="flex flex-col sm:flex-row gap-4 items-center justify-center">  
-            <button class="w-3xs items-center text-xl rounded-full text-white bg-blue-500 hover:bg-blue-600 py-4 px-6 font-semibold transition-colors">
+            <button class="w-3xs items-center text-xl rounded-full text-white bg-dark-magenta hover:bg-blue-600 py-4 px-6 font-semibold transition-colors">
                 Buscar
             </button>
             </form>
@@ -14,5 +17,8 @@
 <style> 
     .fondo-search {
         background-image: linear-gradient(to bottom right,#BBF7D0,#DBEAFE,#93C5FD);
+    }
+    .Poppins {
+        font-family: 'Poppins', sans-serif;
     }
 </style>
