--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -1,13 +1,23 @@
 ---
-import "@styles/global.css";
+import Lupa from '../iconos/Lupa.astro';
 ---
 <section class="mx-auto max-w-7xl px-4> w-full px-4 py-8">
     <div class="fondo-search mx-auto w-full rounded-3xl px-4 py-6">
         <h1 class="Poppins font-semibold text-black/80 tracking-[0.5px] text-2xl text-center pb-4">Bienvenido a Astro Basics</h1>
         <search class="bg-white rounded-3xl p-4">
-            <form class="flex flex-col sm:flex-row gap-4 items-center justify-center">  
-            <button class="w-3xs items-center text-xl rounded-full text-white bg-dark-magenta hover:bg-blue-600 py-4 px-6 font-semibold transition-colors">
-                Buscar
+            <form>
+                <div>
+                    <select class="w-full py-4 border-b border-grey-300 text-grey-600">     
+                        <option value="" disabled selected>Nivel de estudios</option>
+                        <option value="1">Secundario</option>
+                        <option value="2">Técnico</option>
+                        <option value="3">Master</option>
+                    </select>
+                </div>  
+            <button class="rounded-full text-lg font-medium bg-orange-link hover:saturate-150 
+            transition text-white px-6 py-4 inline-flex justify-center items-center w-full">
+                <img src="/src/iconos/search-icon.svg" alt="Lupa" class="w-5 h-5 mr-4">
+            Buscar Ofertas
             </button>
             </form>
         </search>
