--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -1,5 +1,4 @@
 ---
-import Lupa from '../iconos/Lupa.astro';
 ---
 <section class="mx-auto max-w-7xl px-4> w-full px-4 py-8">
     <div class="fondo-search mx-auto w-full rounded-3xl px-4 py-6">
@@ -16,7 +15,7 @@ import Lupa from '../iconos/Lupa.astro';
                 </div>  
             <button class="rounded-full text-lg font-medium bg-orange-link hover:saturate-150 
             transition text-white px-6 py-4 inline-flex justify-center items-center w-full">
-                <img src="/src/iconos/search-icon.svg" alt="Lupa" class="w-5 h-5 mr-4">
+                <img src="../src/iconos/search-icon.svg" alt="Lupa" class="w-5 h-5 mr-4">
             Buscar Ofertas
             </button>
             </form>
