--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -5,20 +5,18 @@ import Lupa3 from '@iconos/lupa.astro';
     <div class="fondo-search mx-auto w-full rounded-3xl px-4 py-6">
         <h1 class="Poppins font-semibold text-black/80 tracking-[0.5px] text-2xl text-center pb-4">Bienvenido a Astro Basics</h1>
         <search class="bg-white rounded-3xl p-4">
-            <form>
-                <div>
-                    <select class="w-full py-4 border-b border-grey-300 text-grey-600">     
+            <form class="flex flex-col items-center">
+                <div class="w-full">
+                    <select class="w-full py-4 border-b border-grey-300 text-grey-600">
                         <option value="" disabled selected>Nivel de estudios</option>
                         <option value="1">Secundario</option>
                         <option value="2">Técnico</option>
                         <option value="3">Master</option>
                     </select>
-                </div>  
-            <button class="rounded-full text-lg font-medium bg-orange-link hover:saturate-150 
-            transition text-white px-6 py-4 inline-flex justify-center items-center w-full">
-                <div  class="w-5 h-5 mr-4"><Lupa3 /></div>
-            Buscar Ofertas
-            </button>
+                </div>
+                <button class="rounded-full text-lg font-medium bg-orange-link hover:saturate-150 transition text-white px-6 py-4 inline-flex justify-center items-center w-[500px]] mt-4">
+                    <div class="w-5 h-5 mr-4"><Lupa3 /></div> Buscar Ofertas
+                </button>
             </form>
         </search>
     </div>
