--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,10 +1,19 @@
+@import url('https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300..900;1,300..900&display=swap');
+
 @import "tailwindcss";
 
 @theme {
-    --font-display: "Satoshi", "sans-serif";
 
+    --font-rubik: "Rubik", sans-serif; 
+    
     --color-mint-500: oklch(0.72 0.11 178);
     --color-dark-magenta: oklch(0.5171 0.1611 354.82);
     --color-orange-link: oklch(0.661 0.2276 33.58)
     /* ... */
+}
+@font-face {
+    font-family: "Bangers", system-ui;
+    font-weight: 400;
+    font-style: normal;
+    src: url("/fonts/Bangers-Regular.ttf") format("truetype");
 }
