--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -3,7 +3,7 @@ import Lupa3 from '@iconos/lupa.astro';
 ---
 <section class="font-rubik mx-auto max-w-7xl px-4> w-full px-4 py-8">
     <div class="fondo-search mx-auto w-full rounded-3xl px-4 py-6">
-        <h1 class="font-bold text-black/80 tracking-[0.5px] text-2xl text-center pb-4">Bienvenido a Astro Basics</h1>
+        <h1 class="font-regular text-black/80 tracking-[0.5px] text-2xl text-center pb-4">Bienvenido a Astro Basics</h1>
         <search class="bg-white rounded-3xl p-4">
             <form class="flex flex-col items-center">
                 <div class="w-full">
@@ -14,7 +14,7 @@ import Lupa3 from '@iconos/lupa.astro';
                         <option value="3">Master</option>
                     </select>
                 </div>
-                <button class="rounded-full text-lg font-medium bg-orange-link hover:saturate-150 transition text-white px-6 py-4 inline-flex justify-center items-center w-[400px] mt-4">
+                <button class="rounded-full text-lg font-regular bg-orange-link hover:saturate-150 transition text-white px-6 py-4 inline-flex justify-center items-center w-[400px] mt-4">
                     <div class="w-5 h-5 mr-4"><Lupa3 /></div> Buscar Ofertas
                 </button>
             </form>
@@ -26,7 +26,7 @@ import Lupa3 from '@iconos/lupa.astro';
     .fondo-search {
         background-image: linear-gradient(to bottom right,#BBF7D0,#DBEAFE,#93C5FD);
     }
-    .section {
+    .font-Bangers {
         font-family: 'Bangers', normal;
     }
 </style>
