--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -3,7 +3,7 @@ import Lupa3 from '@iconos/lupa.astro';
 ---
 <section class="font-rubik mx-auto max-w-7xl px-4> w-full px-4 py-8">
     <div class="fondo-search mx-auto w-full rounded-3xl px-4 py-6">
-        <h1 class="font-regular text-black/80 tracking-[0.5px] text-2xl text-center pb-4">Bienvenido a Astro Basics</h1>
+        <h1 class="font-regular text-black/80 tracking-[0.5px] text-2xl text-center pb-4 font-Bangers">Bienvenido a Astro Basics</h1>
         <search class="bg-white rounded-3xl p-4">
             <form class="flex flex-col items-center">
                 <div class="w-full">
